# sentio_cpp

./: .cursorrules  .gitignore  BACKEND_ARCHITECTURE_CLARIFICATION.md  CMakeLists.txt  CONFLICTING_POSITIONS_CRITICAL_BUG_REPORT.md  EOD_POSITION_CLOSURE_BUG_REPORT.md  METRICS_CONSISTENCY_FINAL_REPORT.md  Makefile  Makefile.transformer  POSITION_ACCUMULATION_BUG_REPORT.md  POSITION_UPDATE_BUG_REPORT.md  PROJECT_RULES.md  README.md  REMAINING_EOD_POSITION_CONFLICTS_BUG_REPORT.md  STRATEGY_AGNOSTIC_BACKEND_BUG_REPORT.md  STRATEGY_SIGNAL_FIXES.md  THRESHOLD_DROPS_BUG_MEGA_DOCUMENT.md  all-test-result.md  architectural_analysis_metric_discrepancy.md  audit.db  audit.db-shm  bug_report_audit_strattest_discrepancy.md  bug_report_core_metrics_discrepancy.md  bug_report_critical_negative_cash.md  bug_report_eod_conflicts_edge_cases.md  bug_report_persistent_eod_conflicts.md  bug_report_system_scalability_failures.md  bug_report_transformer_neutral_signals.md  config.env  config.env.example  create_rth_data.py  debug_audit_position_calc.py  debug_pnl_calculation.cpp  debug_position_calculation.cpp  debug_sigor_probabilities.cpp  full_tpa_output.txt  generate_test_data.py  historical_mars_data.json  mars_test_data.json  new_trade_flow.cpp  (+26 more)
audit/: IRE_last10days_trades.txt  IRE_last10days_trades_fixed.txt  IRE_last10days_trades_higher_util.txt  IRE_last10days_trades_uncapped.txt  IRE_tpa_test_1757312971_q1.review.txt  STRATEGY_TPA_TEST_SUMMARY.md  backtest_QQQ.jsonl  temporal_q1_daily.csv  temporal_q1_signals.csv  temporal_q1_trades.csv
audit/src/: audit_cli.cpp
bindings/: featurebridge.cpp
config/: development_config.yaml  production_config.yaml  transformer_config.yaml
configs/: strategies.json  tfa.yaml  tfa_m4_optimized.yaml  tfa_multi_regime.yaml  tfa_transformer.yaml
configs/features/: feature_spec_55.json  feature_spec_55_working.json
configs/strategies/: ire.json  portfolio_router.json  rule_ensemble.json
data/audit/: sentio.db
data/equities/: QQQ.csv  QQQ_RTH_NH.csv  SQQQ.csv  TQQQ.csv
docs/: AUDIT_TRAIL_REQUIREMENTS.md  ML_INTEGRATION_ARCHITECTURE.md  PROJECT_RULES.md  SANITY_SYSTEM_IMPLEMENTATION.md  STRATEGY_SYSTEM_SANITY_CHECK_REQUIREMENTS.md  architecture.md  readme.md  sentio_user_guide.md
include/kochi/: kochi_binary_context.hpp  kochi_ppo_context.hpp
include/sentio/: accurate_leverage_pricing.hpp  (+116 more)
kochi/: train_binary.py
megadocs/: ARCHITECTURE_FAILURE_BUG_REPORT_MEGA_DOC.md  AUDIT_STRATTEST_DISCREPANCY_MEGA_DOC.md  AUDIT_TRAIL_JSON_PARSING_BUG_REPORT_MEGA_DOC.md  AUDIT_TRAIL_REQUIREMENTS_MEGA_DOC.md  BACKEND_ARCHITECTURE_CODE_REVIEW_MEGA_DOC.md  BACKEND_ARCHITECTURE_COMPLETE_CODE_REVIEW.md  BUG_REPORT_DATA_PACKING_ISSUE.md  BUG_REPORT_MISSING_FUNCTIONS.md  BUG_REPORT_PROBLEMATIC_STRATEGIES.md  BUG_REPORT_REMAINING_ISSUES.md  BUG_REPORT_RTH_REGRESSION.md  BUG_REPORT_RTH_VALIDATION_REGRESSION_FINAL.md  BUG_REPORT_SEGFAULT_5_STRATEGIES.md  BUG_REPORT_SEGFAULT_MARKETMAKING.md  BUG_REPORT_ZERO_ORDERS_FILLS.md  COMPLETE_ARCHITECTURE_SOLUTION_MEGA_DOC.md  CONFLICTING_POSITIONS_CRITICAL_BUG_MEGA_DOC.md  CRITICAL_NEGATIVE_CASH_MEGA_DOC.md  DATA_PACKING_ISSUE_MEGA_DOC.md  DIAGNOSTIC_STRATEGY_MEGA_DOC.md  EOD_CONFLICTS_EDGE_CASES_MEGA_DOC.md  EOD_POSITION_CLOSURE_BUG_MEGA_DOC.md  EOD_POSITION_CLOSURE_CRITICAL_BUG_MEGA_DOC.md  FEATURE_BUILDERS_CODE_REVIEW_REQUEST_MEGA_DOC.md  FINAL_CONFLICTING_POSITIONS_ATOMIC_RESOLUTION_MEGA_DOC.md  GOLDEN_RULE_ARCHITECTURE_FAILURE_MEGA_DOC.md  IRE_10_PERCENT_MONTHLY_RETURN_STRATEGY.md  IRE_DETERMINISTIC_SIGNAL_ISOLATION_BUG_REPORT.md  IRE_DETERMINISTIC_SIGNAL_ISOLATION_MEGA_DOC.md  IRE_ENSEMBLE_NOISE_TRADING_BUG_REPORT.md  IRE_ENSEMBLE_NOISE_TRADING_MEGA_DOC.md  IRE_LOW_UTILIZATION_ROUTER_SIZER_BUG_REPORT.md  IRE_ROUTER_SIZER_UPGRADE_MEGA_DOC.md  IRE_SIGNAL_INTERPRETATION_BUG_MEGA_DOC.md  IRE_STRATEGY_ZERO_SIGNALS_BUG_REPORT.md  IRE_STRATEGY_ZERO_SIGNALS_MEGA_DOC.md  KOCHI_PPO_BINARY_SIGNAL_REFACTOR_REQUIREMENTS.md  KOCHI_PPO_BINARY_SIGNAL_REQUIREMENTS_MEGA_DOC.md  KOCHI_TFA_CODE_REVIEW_AND_TPA_INVESTIGATION.md  MISSING_FUNCTIONS_MEGA_DOC.md  (+50 more)
python/: feature_spec.json
scripts/: build.sh
sentio_trainer/: README.md  cli.py  evaluate_strategies.py
src/: accurate_leverage_pricing.cpp  adaptive_allocation_manager.cpp  adaptive_eod_manager.cpp  allocation_manager.cpp  audit.cpp  audit_validator.cpp  backend_architecture.cpp  backend_audit_events.cpp  base_strategy.cpp  canonical_evaluation.cpp  canonical_metrics.cpp  circuit_breaker.cpp  cli_helpers.cpp  cost_aware_gate.cpp  csv_loader.cpp  data_downloader.cpp  execution_verifier.cpp  feature_builder.cpp  feature_cache.cpp  feature_feeder.cpp  feature_feeder_guarded.cpp  feature_health.cpp  feature_pipeline.cpp  future_qqq_loader.cpp  global_leverage_config.cpp  kochi_runner.cpp  leverage_aware_csv_loader.cpp  leverage_pricing.cpp  main.cpp  main.cpp.backup  mars_data_loader.cpp  optimizer.cpp  pnl_accounting.cpp  poly_fetch_main.cpp  polygon_client.cpp  polygon_ingest.cpp  position_coordinator.cpp  position_guardian.cpp  position_orchestrator.cpp  replay.cpp  (+45 more)
temp_bug_report/: bug_report_architecture_failure.md
tests/: test_audit_parser.py  test_audit_replay.cpp  test_audit_simple.cpp  test_backend_integration.cpp  test_hybrid_ppo.cpp  test_pipeline_emits.cpp  test_pnl_engine.cpp  test_position_guardian.cpp  test_rsi_strategy.cpp  test_sanity_end_to_end.cpp  test_signal_or.cpp  test_sma_cross_emit.cpp
tools/: align_bars.py  analyze_leverage_trading.py  analyze_trades_csv.py  audit_analyzer.py  audit_analyzer_v2.py  audit_chain_report.py  audit_cli  audit_cli.cpp  audit_cli.py  audit_parser.py  data_downloader.py  detailed_strategy_diagnostics.cpp  emit_last10_trades.py  extended_strategy_test.cpp  extract_instrument_distribution.py  fast_historical_bridge.py  historical_context_agent.py  integration_example.cpp  ire_param_sweep.cpp  kochi_bin_runner.cpp  mars_bridge.py  replay_audit.cpp  sanity_integration_example.cpp  signal_diagnostics.cpp  simple_strategy_diagnostics.cpp  strategy_diagnostics.cpp  test_sentio_integrity.py  trace_analyzer.cpp  train_hybridppo_export.py
(+120 files in other folders)
